<resources>
    <string name="app_name">PhhTrebleApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_top_level">Phh Treble Settings</string>
    <string name="desc_activity_top_level">Device specific settings</string>
    <string name="remove_telephony_subsystem">Remove Telephony Subsystem</string>
    <string name="remove_root">Remove Root</string>
    <string name="continue_question">Continue?</string>
    <string name="enable_dt2w">Enable DT2W</string>
    <string name="pocket_gesture">Enable out-of-pocket gesture</string>
    <string name="handwave_gesture">Enable Handwave gesture</string>
    <string name="misc_features">Misc features</string>
    <string name="oneplus_features">OnePlus features</string>
    <string name="qualcomm_features">Qualcomm features</string>
    <string name="huawei_features">Huawei features</string>
    <string name="samsung_features">Samsung features</string>
    <string name="lenovo_features">Lenovo features</string>
    <string name="xiaomi_features">Xiaomi features</string>
    <string name="oppo_features">Oppo features</string>
    <string name="vsmart_features">Vsmart features</string>
    <string name="doze_features">Doze features</string>
    <string name="sponsor_phh">Sponsor phh</string>
    <string name="mobile_network">Mobile network</string>
    <string name="signal_meter_method">Signal meter method</string>
    <string name="display">Display</string>
    <string name="rounded_corners_diameter">Set rounded corners diameter</string>
    <string name="forced_corners_diameter">Set forced/faked rounded corners diameter</string>
    <string name="camera">Camera</string>
    <string name="other">Other</string>
    <string name="securize">Securize</string>
    <string name="bluetooth_workarounds">Bluetooth workarounds</string>
    <string name="max_aspect_ratio">Compatibility max aspect ratio</string>
    <string name="navigation_bar_disabled">Force navigation bar disabled</string>
    <string name="force_headset_switch">Force headset switch (Huawei default)</string>
    <string name="fps_divisor">FPS Divisor</string>
    <string name="force_fps">Force FPS</string>
    <string name="use_screen_brightness_slider">Use linear screen brightness slider</string>
    <string name="disable_backlight_buttons">Disable backlight of hardware buttons if present (requires reboot)</string>
    <string name="expose_aux_cameras">Expose Aux cameras (Qualcomm)</string>
    <string name="enable_amera2api">Force Enable Camera2API HAL3</string>
    <string name="force_timestamp_source">Force Timestamp Source</string>
    <string name="disable_a2dp_offload">Force-disable A2DP offload</string>
    <string name="allow_debugging">Allow takeover of the device by phh for debugging</string>
    <string name="disable_audio_effects">Disable audio effects</string>
    <string name="backlight">Backlight</string>
    <string name="audio">Audio</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="enable_fingerprint_gestures">Enable Fingerprint gestures</string>
    <string name="enable_touchscreen_glove_mode">Enable touchscreen glove mode</string>
    <string name="enable_blurry_ui_workaround">Enable blurry UI workaround (eats more battery)</string>
    <string name="misc">Misc</string>
    <string name="huawei_fast_charge">Huawei fast charge</string>
    <string name="display_mode">Display Mode</string>
    <string name="high_brightness_mode">High brightness mode</string>
    <string name="enable_usb_otg">Enable USB OTG</string>
    <string name="touchscreen">Touchscreen</string>
    <string name="enable_game_mode">Enable game mode</string>
    <string name="enable_dc_diming">Enable DC Diming</string>
    <string name="use_alternate_camera_profile">Use alternate camera profile</string>
    <string name="use_alternate_audio_policy">Use alternate audio policy</string>
    <string name="enable_extended_brightness_range">Enable extended brightness range</string>
    <string name="enable_glove_mode">Enable glove mode</string>
    <string name="enable_stereo_audio_mode">Enable stereo audio mode</string>
    <string name="enable_reversed_wireless_charging">Enable reversed wireless charging(If applicable)</string>
    <string name="enable_access_to_all_cameras">Enable access to all cameras</string>
    <string name="workarounds">Workarounds</string>
    <string name="enable_extra_sensors">Enable extra sensors</string>
    <string name="enable_workaround_for_whiteish_screen">Enable workaround for white-ish screen</string>
    <string name="enable_workaround_for_broken_fingerprint">Enable workaround for broken fingerprint</string>
    <string name="set_max_backlight_level">Set backlight scale/max backlight level</string>
    <string name="my_device">My device</string>
    <string name="nubia_features">Nubia features</string>
    <string name="disable_hw_overlays">Disable HW overlays</string>
    <string name="maintainer_my_device">Maintainer for my device</string>
    <string name="telegram_group_my_device">Community telegram group for my device</string>
    <string name="apply_presets">Apply presets</string>
</resources>
