<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:title="@string/sponsor_phh"
        android:key="key_sponsor">
		<intent
		    android:action="android.intent.action.VIEW"
		    android:data="https://github.com/sponsors/phhusson/" />
	</Preference>
	<PreferenceCategory android:title="@string/mobile_network">
		<ListPreference
		    android:defaultValue="default"
		    android:entries="@array/pref_misc_mobile_signal"
		    android:entryValues="@array/pref_misc_mobile_signal_values"
		    android:key="key_misc_mobile_signal"
		    android:title="@string/signal_meter_method" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/audio">
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="key_huawei_headset_fix"
            android:title="@string/force_headset_switch" />
		<CheckBoxPreference
                    android:defaultValue="false"
                    android:key="key_misc_disable_audio_effects"
                    android:title="@string/disable_audio_effects" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/display">
		<EditTextPreference
            android:defaultValue="-1"
            android:key="key_misc_rounded_corners"
	          android:title="@string/rounded_corners_diameter"
	          android:inputType="number" />
		<EditTextPreference
        android:defaultValue="-1"
        android:key="key_misc_rounded_corners_overlay"
        android:title="@string/forced_corners_diameter"
	android:inputType="number" />
		<ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_misc_fps_divisor"
        android:entryValues="@array/pref_misc_fps_divisor_values"
        android:key="key_misc_fps_divisor"
        android:title="@string/fps_divisor" />
		<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_misc_display_fps"
        android:entryValues="@array/pref_misc_display_fps_values"
        android:key="key_misc_display_fps"
        android:title="@string/force_fps" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/backlight">
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="key_misc_linear_brightness"
            android:title="@string/use_screen_brightness_slider" />
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="key_misc_disable_buttons_backlight"
            android:title="@string/disable_backlight_buttons" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/camera">
		<CheckBoxPreference
						android:defaultValue="false"
						android:key="key_misc_multi_camera"
						android:title="@string/expose_aux_cameras" />
		<CheckBoxPreference
				android:defaultValue="false"
				android:key="key_misc_force_camera2api_hal3"
				android:title="@string/enable_amera2api" />
		<ListPreference
		    android:defaultValue="-1"
		    android:entries="@array/pref_misc_camera_timestamp"
		    android:entryValues="@array/pref_misc_camera_timestamp_values"
		    android:key="key_misc_camera_timestamp"
				android:summary="Requires a Reboot"
		    android:title="@string/force_timestamp_source" />
  </PreferenceCategory>
	<PreferenceCategory android:title="@string/other">
		<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_misc_bluetooth"
        android:entryValues="@array/pref_misc_bluetooth_values"
        android:key="key_misc_bluetooth"
        android:title="@string/bluetooth_workarounds" />
		<ListPreference
    	    android:defaultValue="1.86"
    	    android:entries="@array/pref_misc_max_aspect_ratio_pre_o"
    	    android:entryValues="@array/pref_misc_max_aspect_ratio_pre_o_values"
    	    android:key="key_misc_max_aspect_ratio_pre_o"
    	    android:title="@string/max_aspect_ratio" />
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="key_misc_force_a2dp_offload_disable"
            android:title="@string/disable_a2dp_offload" />
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="key_misc_force_navbar_off"
            android:title="@string/navigation_bar_disabled" />
		<Preference android:title="@string/securize"
                android:key="key_misc_securize" />
	<Preference android:title="@string/remove_telephony_subsystem"
		android:key="key_misc_removetelephony" />
		<CheckBoxPreference
                android:defaultValue="false"
                android:key="key_misc_remotectl"
                android:title="@string/allow_debugging" />
	</PreferenceCategory>
</PreferenceScreen>
