<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="me.phh.treble.app.OnePlusSettingsFragment"
        android:title="@string/oneplus_features" />
    <header
        android:fragment="me.phh.treble.app.VsmartSettingsFragment"
        android:title="@string/vsmart_features" />
    <header
        android:fragment="me.phh.treble.app.QualcommSettingsFragment"
        android:title="@string/qualcomm_features" />
    <header
        android:fragment="me.phh.treble.app.HuaweiSettingsFragment"
        android:title="@string/huawei_features" />
    <header
        android:fragment="me.phh.treble.app.SamsungSettingsFragment"
        android:title="@string/samsung_features" />
    <header
        android:fragment="me.phh.treble.app.LenovoSettingsFragment"
        android:title="@string/lenovo_features" />
    <header
        android:fragment="me.phh.treble.app.XiaomiSettingsFragment"
        android:title="@string/xiaomi_features" />
    <header
        android:fragment="me.phh.treble.app.OppoSettingsFragment"
        android:title="@string/oppo_features" />
    <header
        android:fragment="me.phh.treble.app.DozeSettingsFragment"
        android:title="@string/doze_features" />
    <header
        android:fragment="me.phh.treble.app.MiscSettingsFragment"
        android:title="@string/misc_features" />
</preference-headers>
