<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/fingerprint">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_huawei_fingerprint_gestures"
            android:title="@string/enable_fingerprint_gestures" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/display">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_huawei_touchscreen_glove_mode"
            android:title="@string/enable_touchscreen_glove_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_huawei_no_hwcomposer"
            android:title="@string/enable_blurry_ui_workaround" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc">
	    <ListPreference
		    android:defaultValue="-1"
		    android:entries="@array/pref_huawei_fast_charge"
		    android:entryValues="@array/pref_huawei_fast_charge_values"
		    android:key="key_huawei_fast_charge"
		    android:title="@string/huawei_fast_charge" />
    </PreferenceCategory>

</PreferenceScreen>
