<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/touchscreen">
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="key_oppo_double_tap_to_wake"
            android:title="@string/enable_dt2w" />
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="key_oppo_ts_game_mode"
            android:title="@string/enable_game_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_oppo_usb_otg"
            android:title="@string/enable_usb_otg" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_oppo_dc_diming"
            android:title="@string/enable_dc_diming" />
    </PreferenceCategory>
</PreferenceScreen>
